@@ -1,3 +1,13 @@
+2013-07-24 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c,
+	  src/stm8/ralloc2.cc,
+	  src/stm8/main.c:
+	  More efficient unsigned right shifts by more than 3 bits, implement GETABIT, implement jump from and.
+	* src/hc08/gen.c,
+	  src/hc08/main.c:
+	  Remove support for GETHBIT.
+
 2013-07-23 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
